--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -475,6 +475,7 @@
     <Compile Include="Controllers\ApiV1Controller.NasiPolitici.cs" />
     <Compile Include="Controllers\ApiV1Controller.Modal.cs" />
     <Compile Include="Controllers\ApiV2\ApiV2AuthController.cs" />
+    <Compile Include="Controllers\ApiV2\ApiV2KindexController.cs" />
     <Compile Include="Controllers\ApiV2\ApiV2WebyController.cs" />
     <Compile Include="Controllers\ApiV2\ApiV2FirmyControler.cs" />
     <Compile Include="Controllers\ApiV2\ApiV2DatasetyControler.cs" />
